# osc-graphics

./: .gitignore  Makefile  Makefile.am  configure.ac  effect-pad.c  layer.cpp  layer.h  layer_box.cpp  layer_box.h  layer_image.cpp  layer_image.h  layer_video.cpp  layer_video.h  main.c  main.cpp  osc_graphics.h  osc_server.cpp  osc_server.h
chuck/: Makefile.am  OSCGraphics.ck  OSCGraphicsBox.ck  OSCGraphicsImage.ck  OSCGraphicsLayer.ck  OSCGraphicsPort.ck  OSCGraphicsText.ck  OSCGraphicsVideo.ck  lib.ck  lib.ck.in
compat/bsd/sys/: queue.h
src/: Makefile.am  layer.cpp  layer.h  layer_box.cpp  layer_box.h  layer_image.cpp  layer_image.h  layer_text.cpp  layer_text.h  layer_video.cpp  layer_video.h  main.cpp  osc_graphics.h  osc_server.cpp  osc_server.h  recorder.cpp  recorder.h
